update index.html and cosmetic changes
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@7786 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/flight-selection.css
+++ b/css/flight-selection.css
@@ -166,6 +166,7 @@
 
 .flightSelectionByAirline .resultsArea THEAD .colCost DIV {
 	padding: 2px 1px 4px 1px;
+	cursor: pointer;
 }
 
 .flightSelectionByAirline .resultsArea TBODY .colCost DIV {
